feat: 람다, 스트림 실습 완료